examples/test/testpolicy14695.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14695
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key11: value42
      key2: value42
      key48: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value7
          key20: value12
          key35: value42
      podSelector:
        matchLabels:
          key10: value17
          key0: value33
          key36: value29
